<resources>
    <string name="hello_mad">Hello MAD</string>
    <string name="dictionary_label">Dictionary</string>
    <string name="word_game_label">Word Game</string>
    <string name="dictionary_activity">Test Dictionary</string>
    <string name="about_label">About</string>
    <string name="clear_label">Clear</string>
    <string name="ack_label">Acknowledgments</string>
    <string name="about_text">
        Name: Austin Walker \nEmail: awalker@ccs.neu.edu\n\nI\'m a second year master\'s student and fulltime software engineer at Dell EMC where I work in storage systems.
    </string>
    <string name="imei_text">Phone IMEI: </string>
    <string name="crash_label">Crash App</string>
    <string name="ack_text_v3"><b>Dictionary Assignment</b>\n\n<b>Stack Overflow:</b>\n<a href='https://stackoverflow.com/questions/12154940/how-to-make-a-beep-in-android'>How to generate a beep</a>\n<a href='https://stackoverflow.com/questions/6356170/how-should-i-open-and-close-my-database-properly'>Database management</a>\n\n<b>Libraries:</b>\n<a href='https://github.com/jgilfelt/android-sqlite-asset-helper'>AndroidSQLiteAssetHelper</a>\n\n<b>Style:</b>\nTheme and button design adapted from Hello, Android TicTacToe example</string>
    <string name="ack_text_v5"><b>Word Game Assignment</b>\n\n<b>Stack Overflow:</b>\n<a href='https://stackoverflow.com/questions/13950338/how-to-make-an-android-device-vibrate'>How to vibrate</a>\n\n<b>Other:</b>\n<a href='https://www.hackerearth.com/practice/algorithms/graphs/depth-first-search/tutorial/'>Stack based depth first search</a>\n\n<b>Style:</b>\nColors sourced from <a href='https://material.io/design/color/#color-theme-creation'>Material theme</a>\nTile layout originally from Hello, Android UTTT game</string>
    <string name="ack_text_v7"><b>Word Game Assignment: Connecting</b>\n\n<b>Stack Overflow:</b>\n<a href='https://stackoverflow.com/questions/18799216/how-to-make-a-edittext-box-in-a-dialog#29048271'>How to make a edittext box in a dialoig</a>\n\n<b>Other:</b>\n<a href='https://github.com/firebase/FirebaseUI-Android'>FirebaseUI-Android</a>\n\n<b>Style:</b>\nColors sourced from <a href='https://material.io/design/color/#color-theme-creation'>Material theme</a>\nTile layout originally from Hello, Android UTTT game</string>
    <string name="scroggle_title">Scroggle</string>
    <string name="scroggle_new_game_label">New Game</string>
    <string name="scroggle_resume_game_label">Resume Game</string>
    <string name="scroggle_finish_word_label">Select</string>
    <string name="scroggle_score_label">Score: %1$d</string>
    <string name="global_score_label"><b>Nickname:</b> %1$s\n<b>Score:</b> %2$d\n<b>Highest Word:</b> %3$s\n<b>Highest word score:</b> %4$d</string>
    <string name="scroggle_round_two_text">In this round, you need to spell words using the larger grid. Choose a letter from one of the squares, and then add letters from adjacent squares. You can pick from a square multiple times, but not sequentially.\n\nWhen squares become empty, you\'ll get a new random letter.\n\nEach word is scored as the length of the word plus the scrabble score per letter, shown below:\n\n1 point: A E I O N R T L S\n2 points: D G\n3 points: B C M P\n4 points: F H V W Y\n5 points: K\n8 points: J X\n10 points: Q Z</string>
    <string name="scroggle_leaderboard_label">High Scores</string>

    <string name="treble_level_name_1">Level 1</string>
    <string name="treble_level_description_1">Prelude</string>
    <string name="treble_level_intro_1">Hey you! Yeah, you!\n\nSeems we have an alien problem here... Can you help?\n\nOur quarter notes can stop their bullets. We can\'t let them hit the clef! Try placing an F note.</string>
    <string name="treble_level_success_1">Phew, thanks! Someone forgot to close the staff with that there final barline. It was wide open for aliens to fly right in! Some people just don\'t pay attention...</string>
    <string name="treble_level_fail_1">Welp, there goes the staff...</string>

    <string name="treble_level_name_2">Level 2</string>
    <string name="treble_level_description_2">Three\'s a Crowd</string>
    <string name="treble_level_intro_2">I\'m the major general around here, by the way. Glad to have you with... Oh no, here they come again!</string>
    <string name="treble_level_success_2">Another close call...</string>
    <string name="treble_level_fail_2">You were doing so well!</string>

    <string name="treble_level_name_3">Level 3</string>
    <string name="treble_level_description_3">Minor Issue</string>
    <string name="treble_level_intro_3">Watch out, looks like they\'re coming faster now!</string>
    <string name="treble_level_success_3">Okay, look. Did I leave the bar open? Maybe.\n\nAm I responsible for all these aliens flying around? Sure.\n\nIt\'s in the past!</string>
    <string name="treble_level_fail_3">Ah well, there\'s always next time...</string>

    <string name="treble_level_name_4">Level 4</string>
    <string name="treble_level_description_4">Sharpshooter</string>
    <string name="treble_level_intro_4">I\'ve managed to upgrade our defenses a bit. A sharp note will deflect bullets at an angle.\n\nThat should help us with those pesky aliens when they\'re out of range.</string>
    <string name="treble_level_success_4">You\'re a natural, I tell ya...</string>
    <string name="treble_level_fail_4">It\'s all over!!</string>

    <string name="treble_level_name_5">Level 5</string>
    <string name="treble_level_description_5">How Flattering</string>
    <string name="treble_level_intro_5">I\'ve got our flat note defenses online as well, give it a shot!</string>
    <string name="treble_level_success_5">Don\'t tell me you\'re still upset at me for letting the aliens in. Whaddya want, an apology?</string>
    <string name="treble_level_fail_5">I guess we\'ll consider this accidental damage...</string>

    <string name="treble_level_name_6">Level 6</string>
    <string name="treble_level_description_6">New Tactics</string>
    <string name="treble_level_intro_6">Good news: they gave up attacking the treble clef. Bad news: it\'s the bass clef now!\n\nYou gotta help me out here!</string>
    <string name="treble_level_success_6">You should\'ve told me you were a master at the bass clef, too!</string>
    <string name="treble_level_fail_6">They\'ve compromised the bass!</string>

    <string name="treble_level_name_7">Level 7</string>
    <string name="treble_level_description_7">Aliens Can\'t Eat Grass</string>
    <string name="treble_level_intro_7">Bit of an odd mnemonic, don\'t you think? I\'m sure an alien could eat whatever they want...</string>
    <string name="treble_level_success_7">You pulled through again! Impressive.</string>
    <string name="treble_level_fail_7">We\'re done for!</string>

    <string name="treble_level_name_8">Level 8</string>
    <string name="treble_level_description_8">Putting it Together</string>
    <string name="treble_level_intro_8">I managed to shift the piano for you last time, but I can\'t keep it going! Use flats to pick off those real low ones.</string>
    <string name="treble_level_success_8">Beautiful!</string>
    <string name="treble_level_fail_8">Noooo!!!!</string>

    <string name="treble_level_name_9">Level 9</string>
    <string name="treble_level_description_9">Bach to Basics</string>
    <string name="treble_level_intro_9">They\'re everywhere!</string>
    <string name="treble_level_success_9">Gee, that could have been a major disaster! I think we\'ve cleared all of them out. Thanks for the help!</string>
    <string name="treble_level_fail_9">Oh no, they baroque through! Sorry, couldn\'t resist, heh heh...\n\nWe\'re doomed...</string>
</resources>
