<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_background"
        android:elevation="@dimen/elevation_high"
        android:orientation="vertical"
        android:padding="@dimen/menu_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="edu.neu.madcourse.austinwalker.WordGameMenuActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/menu_space"
            android:text="@string/scroggle_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/menu_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scroggle_username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:" />

            <Button
                android:id="@+id/scroggle_username_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/field_color" />
        </LinearLayout>

        <Button
            android:id="@+id/scroggle_new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/scroggle_new_game_label" />

        <Button
            android:id="@+id/scroggle_resume_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/scroggle_resume_game_label" />

        <Button
            android:id="@+id/scoroggle_leaderboard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroggle_leaderboard_label" />

        <Button
            android:id="@+id/scroggle_ack_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/ack_label" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
